# WebYDL

./: README.md
app/: CMakeLists.txt  main.cpp
app/approot/: templates.xml
app/docroot/: main.js  style.css
run/: run.sh
