cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
project(app)
add_executable(app.wt main.cpp)
set_property(TARGET app.wt PROPERTY CXX_STANDARD 17)
find_package(fmt)
find_package(Wt REQUIRED Wt HTTP)
target_link_libraries(app.wt PUBLIC Wt::HTTP Wt::Wt)
target_link_libraries(app.wt PUBLIC fmt::fmt)